chore(git): added output test folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 # Output bin folder
 bin/
 
+# Tests output folder
+tests/
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
